# gh-api-benchmark

./: .gitignore  README.md  analyze.py  benchmark.py  pyproject.toml  setup_repo.py
benchmark/: amber_parallel_2c_1_721a9446.md  amber_parallel_3c_4_aab9e683.md  amber_parallel_3c_6_db3f646c.md  amber_parallel_3c_7_25e07a49.md  amber_parallel_3c_8_db1fc771.md  amber_parallel_3c_9_28f9ccd6.md  amber_sequential_1c_0_39270b24.md  amber_sequential_1c_0_63334d96.md  amber_sequential_1c_0_aa31e39e.md  amber_sequential_1c_1_2d9a7a80.md  amber_sequential_1c_2_f9667b70.md  amber_sequential_1c_3_de228c62.md  amber_sequential_1c_5_3b57997c.md  amber_sequential_1c_6_d60b693f.md  amber_sequential_1c_8_efc0dd81.md  amber_sequential_1c_9_a8ce8de8.md  deps-dependabot_parallel_1c_0_6978d756.txt  deps-dependabot_parallel_1c_0_cfef1f5c.txt  deps-dependabot_parallel_2c_1_1b53dae9.txt  deps-dependabot_parallel_2c_2_0c6b14e4.txt  deps-dependabot_parallel_3c_3_62442a29.txt  deps-dependabot_parallel_3c_5_8455cc9b.txt  deps-dependabot_sequential_1c_0_dadc976a.txt  deps-dependabot_sequential_1c_1_29e70e02.txt  deps-dependabot_sequential_1c_4_9a6f0d09.txt  deps-dependabot_sequential_1c_7_fa8d3f3d.txt
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/benchmark/: route.ts
dashboard/src/app/api/compare/: route.ts
dashboard/src/app/api/runs/: route.ts
dashboard/src/app/api/runs/[runId]/: route.ts
dashboard/src/lib/: db.ts
